refactor: Update project name and color scheme
This commit rebrands the project from "Haunt.gg Dashboard Clone" to "Wryft Dashboard". It updates the project name in `package.json` and `metadata.json`.

Additionally, it refactors the color palette to align with the new branding:
- The primary accent color is changed from pink to violet.
- Corresponding gradient and hover effects in charts and UI components are updated.
- Route navigation logic in the Sidebar is updated to use `useNavigate` hook from `react-router-dom`.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Haunt.gg Dashboard</title>
+    <title>Wryft Dashboard</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <script>
@@ -15,17 +15,13 @@
               sans: ['Inter', 'sans-serif'],
             },
             colors: {
-              haunt: {
+              wryft: {
                 bg: '#050505',
                 card: '#0a0a0a',
                 border: '#262626',
-                pink: '#ec4899',
-                pinkDim: 'rgba(236, 72, 153, 0.1)',
+                main: '#8b5cf6', // violet-500
+                mainDim: 'rgba(139, 92, 246, 0.1)',
                 textSecondary: '#a3a3a3',
-              },
-              wryft: {
-                purple: '#8b5cf6',
-                accent: '#a78bfa'
               }
             },
             animation: {
@@ -64,7 +60,7 @@
         border-radius: 3px;
       }
       ::-webkit-scrollbar-thumb:hover {
-        background: #ec4899; 
+        background: #8b5cf6; 
       }
       
       .grid-bg {
