feat: Implement user customization for dashboard theme
Introduces a new customization page and functionality for users to personalize their dashboard.
This includes options for layout, fonts, primary and background colors, card styles, and background effects.
Theme configurations are now stored in the `profiles` table in Supabase.
New CSS classes and font imports have been added to support these customization options.
The `UserProfile` and `ThemeConfig` types have been updated to reflect these changes.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Wryft</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&family=Playfair+Display:ital,wght@0,400;0,700;1,400&family=Courier+Prime&display=swap" rel="stylesheet">
     <script>
       tailwind.config = {
         darkMode: 'class',
@@ -68,6 +69,17 @@
         background-image: radial-gradient(#333 1px, transparent 1px);
         background-size: 40px 40px;
         mask-image: radial-gradient(circle at center, black, transparent 80%);
+      }
+
+      .scanlines {
+        background: linear-gradient(
+          to bottom,
+          rgba(255,255,255,0),
+          rgba(255,255,255,0) 50%,
+          rgba(0,0,0,0.2) 50%,
+          rgba(0,0,0,0.2)
+        );
+        background-size: 100% 4px;
       }
     </style>
 <script type="importmap">
