--- a/index.html
+++ b/index.html
@@ -122,7 +122,8 @@
     "@supabase/supabase-js": "https://aistudiocdn.com/@supabase/supabase-js@^2.83.0",
     "framer-motion": "https://aistudiocdn.com/framer-motion@^12.23.24",
     "vite": "https://aistudiocdn.com/vite@^7.2.2",
-    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1"
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1",
+    "react-easy-crop": "https://aistudiocdn.com/react-easy-crop@^5.5.3"
   }
 }
 </script>
