--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
             animation: {
               'fade-in': 'fadeIn 0.5s ease-out forwards',
               'slide-up': 'slideUp 0.5s ease-out forwards',
+              'float': 'float 3s ease-in-out infinite',
+              'pulse-slow': 'pulseSlow 4s cubic-bezier(0.4, 0, 0.6, 1) infinite',
             },
             keyframes: {
               fadeIn: {
@@ -37,6 +39,14 @@
               slideUp: {
                 '0%': { opacity: '0', transform: 'translateY(20px)' },
                 '100%': { opacity: '1', transform: 'translateY(0)' },
+              },
+              float: {
+                '0%, 100%': { transform: 'translateY(0)' },
+                '50%': { transform: 'translateY(-10px)' },
+              },
+              pulseSlow: {
+                '0%, 100%': { opacity: '0.4' },
+                '50%': { opacity: '0.1' },
               }
             }
           }
@@ -108,8 +118,18 @@
       @keyframes fall {
         to { transform: translateY(600px); }
       }
+      
+      /* Loader specific */
+      .loader-bar {
+        width: 0%;
+        animation: loaderProgress 2s ease-in-out forwards;
+      }
+      @keyframes loaderProgress {
+        0% { width: 0%; }
+        100% { width: 100%; }
+      }
     </style>
-  <script type="importmap">
+<script type="importmap">
 {
   "imports": {
     "react": "https://aistudiocdn.com/react@^19.2.0",
