feat: Add audio playback and theming to public profiles
Introduces an audio player component and integrates it into the public profile view. Enhances the theming capabilities to include audio playback options. Updates project dependencies, including Tailwind CSS, and adjusts TypeScript configuration for improved build processes.

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
               'slide-up': 'slideUp 0.5s ease-out forwards',
               'float': 'float 3s ease-in-out infinite',
               'pulse-slow': 'pulseSlow 4s cubic-bezier(0.4, 0, 0.6, 1) infinite',
+              'spin-slow': 'spin 4s linear infinite',
             },
             keyframes: {
               fadeIn: {
